--- a/style.css
+++ b/style.css
@@ -478,6 +478,120 @@ blockquote>q{
 .review-active-btn{
     background: #fff;
 }
+
+.wrap-7{
+    background-color: #fff;
+    padding: 0.6rem;
+}
+
+.wrap-7-header{
+    display: grid;
+    gap: 2rem;;
+    grid-template-columns: repeat(12,1fr);
+    margin-bottom: 5rem;
+    /* grid-template-rows: 1fr 1fr; */
+}
+.wrap-7-heading{
+    margin-bottom: 0;
+}
+.teams-member-wrapper{
+    display: grid;
+    grid-template-columns: repeat(12,1fr);
+    gap:1.875rem;
+    margin-bottom: 3rem;
+}
+.avatar-wrapper{
+    position: relative;
+    margin-bottom: 3.125rem;
+    /* border: 1px solid orange; */
+}
+.social-icons-wrapper{
+    /* border: 1px springgreen solid; */
+    /* max-width: fit-content; */
+    position: absolute;
+    top: 40%;
+    right: 12.2%;
+}
+.social-icons{
+    display: flex;
+    gap: 0.563rem;
+    
+}
+.social-icons>li>a{
+    color: #fff;
+    padding: 0.875rem;
+    background-color: var(--red);
+    border-radius: 50%;
+    font-size: 1.5rem;
+    width: 3.125rem;
+    /* line-height: 50px; */
+    text-align: center;
+    
+}
+.facebook{
+    padding: 0px 5px ;
+    /* color: aqua; */
+}
+.member1{
+    grid-column: 1/5;
+}
+.member2{
+    grid-column: 5/9;
+}
+.member3{
+    grid-column: 9/13;
+}
+.member{
+    display: flex;
+    flex-direction: column;
+    margin-left: 96px;
+    font-size: 14px;
+    font-weight: 100;
+}
+.member>h3{
+    font-size: 18px;
+    font-weight: 700;
+    margin-bottom: 16px;
+}
+.member>span{
+    font-size: 14px;
+    font-weight: 100;
+    margin-bottom: 28px;
+}
+.member>p{
+    font-size: 14;
+}
+
+.wrap-8{ 
+    background: #666;
+     color: #fff;
+      padding: 85px 0 0 0;
+       text-align: center;
+    }
+.awards-wrapper{
+    /* display: grid;
+    grid-template-columns: repeat(12,1fr);
+    grid-template-rows: 1fr;
+    text-align: center; */
+    /* padding: 1rem; */
+    display: flex;
+    justify-content: space-around;
+    gap: 2rem;
+   
+}
+.award{
+    font-size: 72px;
+    color: #fff;
+}
+.award>strong{
+    text-transform: uppercase;
+    font-size: 18px;
+    
+    display: block; 
+    margin-bottom: 75px;
+}
+
+
 /* media query */
 @media screen and (max-width: 1220px) {
   .play-btn {
@@ -486,6 +600,19 @@ blockquote>q{
   .wrap-3 {
     padding: 0 1rem;
   }
+}
+@media screen and (max-width:1024px) {
+    .social-icons{
+        flex-direction: column;
+        gap: 2.4rem;
+    }
+    .social-icons-wrapper{
+        top: 5%;
+        left:60%;
+    }
+    .member{
+        margin: 1rem;
+    }
 }
 
 @media screen and (max-width: 940px) {
@@ -527,6 +654,11 @@ blockquote>q{
         gap: 4.8rem;
         justify-content: space-around;
     } */
+    .awards-wrapper{
+        gap: 2px;
+        /* color: #ca3c3c; */
+        /* background-color: aquamarine; */
+    }
   }
 @media screen and (max-width: 674px)  {
   .menu {
@@ -612,7 +744,21 @@ blockquote>q{
         flex-direction: column;
         padding-inline: 1rem;
     }
-  
+    .teams-member-wrapper{
+        display: flex;
+        flex-direction: column;
+    }
+    .wrap-7-header{
+        grid-template-columns: repeat(8,1fr);
+    }
+    .wrap-7-heading{
+        grid-column: 1/8;
+    }
+    .awards-wrapper{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto;
+    }
   
 }
 
@@ -626,6 +772,11 @@ blockquote>q{
     /* header,.banner,.wrap-3,.wrap-4{
         max-width: 100%;
     } */
+    .awards-wrapper{
+        display: grid;
+        grid-template-columns: auto;
+        grid-template-rows: auto;
+    }
 }
 
 /* landscape 932px */
