--- a/style.css
+++ b/style.css
@@ -218,7 +218,7 @@ button {
   font-size: 3.75rem;
   color: #fff;
   margin: 0;
-  line-height: 1/12;
+  /* line-height: 1/12; */
 }
 .banner-text-div > a {
   font-size: 1rem;
@@ -559,7 +559,7 @@ blockquote>q{
     margin-bottom: 28px;
 }
 .member>p{
-    font-size: 14;
+    font-size: 14px;
 }
 
 .wrap-8{ 
@@ -592,6 +592,81 @@ blockquote>q{
 }
 
 
+.wrap-9{ 
+  background: #fff;
+  padding: 100px 0 140px;
+  color: #363636;
+  padding: 1rem;
+  }
+
+
+.section-9-wrapper{
+  display: grid;
+  grid-template-columns: repeat(12,1fr);
+  gap: 2rem;
+  grid-template-rows: repeat(3,1fr);
+  /* align-items: center; */
+}
+
+.canvas-wrapper{
+  background: #ddd;
+  display: flex;
+  gap: 2rem;
+  grid-row: 2;
+  grid-column: 1/9;
+  /* flex-wrap: wrap; */
+  
+}
+
+canvas{ 
+  background: #ddd;
+  max-width: 100%;
+  min-height: 10.625rem;
+  border: #ca3c3c 1px solid;
+}
+
+.section-9-intro{
+  grid-row: 3;
+  grid-column: 1/9;
+  display: flex;
+  flex-direction: column;
+
+}
+
+.accordion{
+  grid-row: 2/4;
+  grid-column: 9/13;
+  /* border: #ca3c3c 1px solid; */
+}
+
+
+.accordion>ul>li>a{
+  color: #898989;
+  display: block;
+   border: 1px solid #ebebeb;
+    padding: 1rem;
+     border-radius: 10px;
+  font-size: 1.4rem;
+  font-weight: 700;
+  text-transform: capitalize;
+}
+.accordion>ul>li>a>span{
+  margin-right: 18px;
+  font-size: 1.5rem;
+}
+
+.accordion a::after{ 
+  content: '+';
+   float: right;
+  }
+.accordion>ul>li>p{
+  display: none;
+  margin: 20px;
+  /* color: #ca3c3c; */
+}
+.accordion a.active{ color: var(--red);}
+.accordion a.active::after{ content: '-';}
+.accordion li:first-child p{ display: block;}
 /* media query */
 @media screen and (max-width: 1220px) {
   .play-btn {
@@ -630,6 +705,15 @@ blockquote>q{
   .header-wrapper {
     gap: 2rem;
   }
+  .section-heading{
+      
+    grid-column: 1/6;
+}
+.section-btn{
+    
+    grid-column: 1/7;
+    
+}
   .wrap4-icon{
     display: flex;
     grid-template-columns: repeat(3,1fr);
@@ -643,6 +727,32 @@ blockquote>q{
         margin: 0;
         margin-right: 0.6rem;
     }
+    .heading{
+      grid-row: 1;
+      grid-column: 1/4;
+    }
+    .section-9-wrapper{
+      grid-template-columns: repeat(6,1fr);
+      grid-template-rows: 0.4fr 1fr 1fr;
+      gap: 1rem;
+    }
+    .canvas-wrapper{
+      grid-column: 1/5;
+      grid-row: 2;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-content: center;
+      gap: 1rem;
+      min-height: fit-content;
+    }
+    
+    .accordion{
+      grid-row: 2;
+      grid-column: 5/13;
+      
+      
+    }
+  
 }
 @media screen and (max-width: 800px) {
     /* .wrap-4{
@@ -659,6 +769,8 @@ blockquote>q{
         /* color: #ca3c3c; */
         /* background-color: aquamarine; */
     }
+   
+    
   }
 @media screen and (max-width: 674px)  {
   .menu {
