--- a/style.css
+++ b/style.css
@@ -667,6 +667,42 @@ canvas{
 .accordion a.active{ color: var(--red);}
 .accordion a.active::after{ content: '-';}
 .accordion li:first-child p{ display: block;}
+
+.wrap-10{ 
+  background:var(--red);
+   /* padding: 1.438rem 0 1.375rem; */
+}
+.section-10-form-wrapper form{
+  /* border:1px solid; */
+  justify-content: space-evenly;
+  align-content: center;
+  align-items: center;
+  padding: 1rem;
+}
+
+.wrap-10 input{ 
+  max-width: 26.125rem;
+   background: none;
+   border: none;
+   min-height: 2.188rem;
+   color: #fff;
+   font: 100 2.25rem var(--ff);
+   /* border: solid; */
+}
+.wrap-10 input::placeholder{
+  color: #fff;
+ }
+.wrap-10 input:focus{ 
+  outline: none;
+}
+.wrap-10 button{ 
+  background: #fff;
+  
+  font-size: 1rem;
+  
+  text-align: center;
+  padding: 0;
+ }
 /* media query */
 @media screen and (max-width: 1220px) {
   .play-btn {
@@ -889,6 +925,13 @@ canvas{
     }
     .member{
       font-size: 1.6rem;
+    }
+
+    .wrap-10 input{
+      font-size: 1.4rem;
+    }
+    .form-btn{
+      font-size: 0.6rem;
     }
   
 }
