--- a/style.css
+++ b/style.css
@@ -703,6 +703,32 @@ canvas{
   text-align: center;
   padding: 0;
  }
+
+ .wrap-11{ 
+  background: #7f7f7f;
+   /* padding: 28px 0 0 0; */
+   padding: 1.6rem 0;
+  }
+ /* .box{ margin-bottom: 27px; background: #a6a6a6; color: #fff; text-align: center; line-height: 95px; font-size: 18px; } */
+ .company-logo-wrapper{
+  display: flex;
+  gap: 2rem;
+  margin-inline: auto;
+  /* border:solid; */
+  align-content: center;
+  justify-content: center;
+  padding: 1rem;
+ }
+ .box{
+  /* border: 1px solid whitesmoke; */
+  /* line-height: 95px; */
+  padding: 2rem 0.625rem;
+  max-width: 10.625rem;
+  font-size: larger;
+  background: #a6a6a6;
+  color: #fff;
+ }
+
 /* media query */
 @media screen and (max-width: 1220px) {
   .play-btn {
@@ -933,6 +959,29 @@ canvas{
     .form-btn{
       font-size: 0.6rem;
     }
+    .company-logo-wrapper{
+      display: grid;
+      grid-template-columns: 1fr 1fr ;
+      gap:0.625rem;
+      justify-content: center;
+      align-content: center;
+      margin-inline: auto;
+      
+    }
+    .box{
+      margin-inline: auto;
+    }
+    .last-box{
+      /* background-color: #ca3c3c; */
+      max-width: 100%;
+      text-align: center;
+      grid-column: 1/span 2;
+      margin: 0;
+      align-items: center;
+      /* align-self: center; */
+      /* margin-left: 1.8rem; */
+    }
+    
   
 }
 
