--- a/style.css
+++ b/style.css
@@ -715,7 +715,7 @@ canvas{
   gap: 2rem;
   margin-inline: auto;
   /* border:solid; */
-  align-content: center;
+  align-items: center;
   justify-content: center;
   padding: 1rem;
  }
@@ -728,6 +728,129 @@ canvas{
   background: #a6a6a6;
   color: #fff;
  }
+
+.wrap-12{
+  background-color: #ebebeb;
+  padding: 1rem;
+  
+}
+
+.address-icons-wrapper{
+  display:grid;
+  grid-template-columns: repeat(12,1fr);
+  
+  gap: 2rem;
+  margin-bottom: 50px;
+  border:soild 4px red;
+  margin-top: 6.25rem;
+}
+
+.address-icons-wrapper h2{
+  grid-column: 1/ span 5 ;
+}
+.address-icons-wrapper address{
+  grid-row: 2;
+  grid-column: 1/sapn 4;
+  color: #898989;
+}
+
+.soc-contact{
+  grid-row: 3;
+  grid-column: 1/sapn 5;
+  display: flex;
+  gap: 26px;
+  
+}
+.contact-social-icon{
+  color: #ca3c3c;
+}
+
+.contact-form{
+  display:grid;
+  grid-template-columns: repeat(12,1fr);
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  margin-bottom: 6.25rem;
+}
+.contact-form div{
+  /* border: none; */
+  /* background-color: lightcoral; */
+  width: 100%;
+  /* min-height: 41px; */
+}
+
+.email-input{
+  grid-column: 1/ span 4;
+  border: 2px soild #212121;
+  
+
+}
+.email-input input{
+  max-width: 100%;
+}
+.username-input{
+  grid-column: 5/span 4;
+}
+.message-input{
+  grid-row: 2;
+  grid-column: 1/ span 8;
+  width: 100%;
+  align-self: center;
+}
+.submit-btn-wrapper{
+  grid-row: 2;
+  grid-column: 9/ span 4;
+  width:100%;
+  /* background-color: cadetblue; */
+}
+.submit-btn{
+  
+  /* display: inline-block; */
+  /* padding: 30px 94px; */
+  min-width: 100%;
+  min-height: 80px;
+  color: #ca3c3c;
+  /* background-color: blueviolet; */
+  font-size: 1.2rem;
+
+}
+.submit-btn:hover{
+  background-color: #ca3c3c;
+  color: #212121;
+}
+
+.wrap-12 label{ 
+  border: 0.125rem solid;
+   color: #363636;
+   /* margin: 1rem 0; */
+    width: 100%;
+   padding: 20px 10px;
+   vertical-align: middle;
+   border-radius: 10px;
+  }
+.wrap-12 input{ 
+  border: none;
+   background: none;
+  max-width: 100%;
+  font-size: 1.2rem;
+  color: #212121;
+}
+.wrap-12 :is(input, textarea):focus{ outline: none; }
+.wrap-12 textarea{
+  border: none;
+  background: none;
+  resize: none;
+  vertical-align: middle;
+  /* height: 5rem;  */
+  background: #fff;
+  width: 86%;
+  font-size: 1.2rem;
+  color: #212121;
+}
+/* .wrap-12 button{ margin: 1rem 0; display: block; width: 100%; height: 80px; background: #fff;  border: none; border-radius: 10px; font: 16px var(--ff); color: var(--red);}
+.wrap-12 button span.fa{ font-size: 36px; vertical-align: middle;} */
+.wrap-12 label:focus-within{ border-color: var(--red); }
 
 /* media query */
 @media screen and (max-width: 1220px) {
@@ -815,6 +938,9 @@ canvas{
       grid-column: 5/13;
       
       
+    }
+    .address-icons-wrapper h2{
+      grid-column: 1/ span 8 ;
     }
   
 }
@@ -980,6 +1106,23 @@ canvas{
       align-items: center;
       /* align-self: center; */
       /* margin-left: 1.8rem; */
+    }
+    .address-icons-wrapper{
+      /* padding: 0 1rem; */
+      display: flex;
+      flex-direction: column;
+    }
+    /* .address-icons-wrapper h2{
+      grid-column: 1/ 14 ;
+    } */
+
+    .contact-form{
+      display: flex;
+      flex-direction: column;
+      /* padding: 0 1rem; */
+    }
+    .wrap-12 textarea{
+      width: 98%;
     }
     
   
